; ModuleID = '/home/carl/AnghaBench/ccv/lib/extr_ccv_icf.c_ccv_icf_write_classifier_cascade.c'
source_filename = "/home/carl/AnghaBench/ccv/lib/extr_ccv_icf.c_ccv_icf_write_classifier_cascade.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"w+\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ccv_icf_write_classifier_cascade(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i32* @fopen(i8* %6, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = load i32*, i32** %3, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @_ccv_icf_write_classifier_cascade_with_fd(i32* %11, i32* %12)
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @fclose(i32* %14)
  br label %16

16:                                               ; preds = %10, %2
  ret void
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @_ccv_icf_write_classifier_cascade_with_fd(i32*, i32*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
